fix CSS issues on Firefox

--- a/src/main/webapp/app/shared/routes/route-selector.component.scss
+++ b/src/main/webapp/app/shared/routes/route-selector.component.scss
@@ -6,36 +6,28 @@ Route selector styles
     margin-top: 1%;
     margin-bottom: 2%;
     padding-left: 0;
-    .badge { /* UP, DOWN, ... */
-        float: right;
+    input[type="search"] {
+        margin: auto 10px;
     }
-    li.list-group-item, li.dropdown-item { /* routes names */
+    .dropdown-item { /* routes names */
+        margin-right: 0.5rem;
         word-break: break-all;
         display: block;
+        display: -webkit-flex;
+        justify-content: space-between;
+        &:hover {
+            color: #fff;
+            background-color: #80bed8;
+        }
+        &:active {
+            color: #fff;
+            background-color: #0275d8;
+        }
+        .badge { /** vertically center badges */
+            margin: auto 0;
+        }
+        &.disabled { /** disable DOWN instances **/
+            pointer-events: none;
+        }
     }
-}
-
-.dropdown-item {
-    margin-right: 0.5rem;
-    word-break: break-all;
-    display: flex;
-    justify-content: space-between;
-    &:hover {
-        color: #fff;
-        background-color: #80bed8;
-    }
-    &:active {
-        color: #fff;
-        background-color: #0275d8;
-    }
-    .badge { /** vertically center badges */
-        margin: auto 0;
-    }
-    &.disabled { /** disable DOWN instances **/
-        pointer-events: none;
-    }
-}
-
-input[type="search"] {
-    margin: auto 10px;
 }
